--- a/Authentication/public/index.css
+++ b/Authentication/public/index.css
@@ -1,16 +1,3 @@
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  text-align: center;
-  width: 1000px;
-  height: 350px;
-	top:0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-  	
-	margin: auto;
-}
 img {
   border: 3px solid black;
   border-radius: 15px;
@@ -18,10 +5,6 @@ img {
   width: 150px;
   height:140px;
 }
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
 .container {
   padding: 2px 16px;
 }
@@ -35,7 +18,7 @@ img {
   right: 0;
   bottom: 0;
   background-color: rgba(0,0,0,0.3); 
-  z-index: 3; 
+  z-index: 100000000; 
 }
 #loader{
   position: absolute;
@@ -44,13 +27,3 @@ img {
   transform: translate(-50%,-50%);
   -ms-transform: translate(-50%,-50%);
 }
-
-#centered{
-  position: absolute;
-  top: 44%;
-  height: 400px;
-  margin-top: -200px; /* Half of the height */
-  left: 46%;
-  width:800px;
-  margin-left: -400px; /* Half of the width */
-  }
