--- a/Authentication/public/index.css
+++ b/Authentication/public/index.css
@@ -28,19 +28,33 @@ img {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   text-align: center;
-  width: 70%;
+  width: 45%;
   height: 100%;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
   margin: auto;
-  margin-top: 0.5%;
+  margin-top: 1.5%;
   padding-bottom: 0.5%;
 }
-.homeImg{
-  width:10%;
-  height:10%;
+.extraContentPage {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  text-align: center;
+  width: 56%;
+  height: 100%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  margin-top: 1.5%;
+  padding-bottom: 0.5%;
+}
+.homeImg {
+  width: 10%;
+  height: 10%;
 }
 .adminStyle {
   padding-bottom: 5.5%;
@@ -78,10 +92,23 @@ img {
   height: 5%;
   cursor: pointer;
 }
-.loaderImg{
-  width:35%;
-  height:35%;
+.menuIcon {
+  width: 12%;
+  height: 95%;
 }
-.sidenavStyle{
+.loaderImg {
+  width: 35%;
+  height: 35%;
+}
+.sidenavStyle {
   background-color: #263238;
+}
+#toast-container {
+  top: 10% !important;
+  right: auto !important;
+  left:7%;  
+}
+.profilePhoto {
+  width: 30%;
+  height: 30%;
 }
